# rw_by_tg-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  all_stations_list.json  all_stations_list.py  cloudbuild.yaml  deep_seek_format.py  docker-compose.yml  entrypoint.sh  example.py  example_chat_gpt.py  init.sql  main.py  main_learn.py  new.txt  pyproject.toml  readme.txt  telegram_bot.py  test.py  test_bot.sql  test_rw_by.html  tests_for_bot.txt  token_info.py  tracking_train.sqlite3  webhook_cert.pem  webhook_pkey.pem
src/: config.py  database.py  example.py  main.py  utils.py
