[project]
name = "rw-by"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei-KV",email = "a.v.kovalev9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "html5lib (>=1.1,<2.0)",
    "python-telegram-bot (==20.3)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "cloud-sql-python-connector (>=1.18.2,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Aвтоматически форматирует код по своему строгому стилю (PEP8+)
[tool.black]
line-length = 79
target-version = ['py312'] # Под какую версию Python оптимизировать
skip-string-normalization = true # Не заменять двойные кавычки на одинарные и наоборот

# Автоматически упорядочивает import-ы по алфавиту и группам. Работает в связке с black
[tool.isort]
profile = "black" # Форматирует импорты так, чтобы не конфликтовать с black
line_length = 79
multi_line_output = 3 # Cтиль вывода длинных импортов. 3 == каждый импорт в новой строке
include_trailing_comma = true # Добавляет запятую в конце последнего импорта
force_grid_wrap = 0 # Красиво разнесёнными по строкам
use_parentheses = true # Делает длинные импорты обёрнутыми в скобки

# Проверяет стиль, простые ошибки (неиспользуемые переменные, длину строк, отступы и пр.)
[tool.flake8]
max-line-length = 79
